	  CONFIG_DISABLE_PSEUDOFS_OPERATIONS that effectively can be set
	  back out these recent changes in rmdir, mkdir, unlink, and rename
	  for operations on the pseudo-filesystem (2014-2-20).
	* Kconfig:  Add an option to select default values for configuration
	  variables based upon whether you want a smaller footprint or more
	  features.  CONFIG_DEFAULT_SMALL is used in sched/Kconfig and
	  fs/Kconfig and in apps/.  It turns out this this is not very useful
	  if you are modifying existing configurations because then the
	  defaults do not apply (2014-2-20).
	* arch/arm/src/sam34/chip/sam4e_vectors.h:  Add vector definitions
	  for the SAM4E (2014-2-21).
	* arch/arm/src/sam34/chip/sam4e_memorymap.h:  Add SAM4E memory map
	  (2014-2-21).
	* arch/arm/src/sam34/sam4e_gpio.h, sam4e_periphclks.h, and chip/sam4e_pio.h:
	  Add PIO support for the SAM4E (2014-2-21).
	* configs/stm3220g-eval/nsh/defconfig: Converted to use kconfig-frontends
	  by Alan Carvalho de Assis (2014-2-10)
	* configs/*/defconfig: Comment out all CONFIG_APPS_DIR settings.  These
	  should not be set in the default configurations because we don't know
	  where the apps/ directly will reside until configuration time (2014-2-21).
	* arch/arm/src/sam34/chip/sam4e_pinmap.h:  SAM4E pin multiplexing
	  definitions (2014-2-21).
	* sched/sched_processtimer.c and fs/procfs/fs_procfscpuload.c:  Add
	  logic to measure and calculate the CPU load percentage.  From David
	  Alessio (2014-2-22).
	* sched/sched_processtimer.c, sched_cpuload.c, fs/procfs/fs_procfscpuload.c,
	  and fs_procfscpuload.c:  CPU load logic extended to keep counts on each
	  thread.  The per-thread CPU is now reported in the procfs under
	  <pid>/loadavg (2014-2-23).
	* include/stddef.h:  ptrdiff_t is defined twice in stddef.h and also in
	  sys/types.h.  stdef.h is the correct location for the definition, but
	  it includes sys/types.h so, at least for now, the definition will be
	  retained in sys/types.h (2014-2-25).