@@ -243,6 +243,18 @@ int stm32_usbhost_initialize(void);
 #endif
 
 /****************************************************************************************************
+ * Name: stm32_led_initialize
+ *
+ * Description:
+ *   Initialize LEDs
+ *
+ ****************************************************************************************************/
+
+#ifdef CONFIG_ARCH_LEDS
+void stm32_autoled_initialize(void);
+#endif
+
+/****************************************************************************************************
  * Name: stm32_extmemgpios
  *
  * Description:
