@@ -239,7 +239,7 @@ void stm32_boardinitialize(void)
   /* Configure on-board LEDs if LED support has been selected. */
 
 #ifdef CONFIG_ARCH_LEDS
-  board_led_initialize();
+  stm32_autoled_initialize();
 #endif
 }
 
