@@ -6665,3 +6665,7 @@
 	  sys/types.h.  stdef.h is the correct location for the definition, but
 	  it includes sys/types.h so, at least for now, the definition will be
 	  retained in sys/types.h (2014-2-25).
+	* net/net_close.c:  Fix one place where the connection reference count
+	  was not being decremented.  This is really a cosmetic change BUT
+	  when CONFIG_DEBUG_NET is enable, it will cause assertions (2014-2-25).
+
